--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
         
     </div>
 
-  <h1 class=contact> Contact me</h1>
+  <h1 class=contact> What is your favourite game?</h1>
     <div class="form">
 
   <form>
