--- a/consoles.html
+++ b/consoles.html
@@ -13,7 +13,7 @@
 <body>
     <div id="navigation">
     <div class="navbar col-sm-auto col-md-auto col-lg-auto">
-        <a href="index.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="about.html">About</a>
         <a href="game.html">Favourite Games</a>
         <a href="consoles.html">Favourite consoles</a>
